// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computed property with fragments 1`] = `
Object {
  "data": Object {
    "me": Object {
      "__typename": "User",
      "firstName": "John",
      "fullName": "John Doe",
      "lastName": "Doe",
      Symbol(id): "$ROOT_QUERY.me",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`return computed property 1`] = `
Object {
  "data": Object {
    "me": Object {
      "__typename": "User",
      "firstName": "John",
      "fullName": "John _&_&_ Doe",
      "lastName": "Doe",
      Symbol(id): "$ROOT_QUERY.me",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`return computed property for nested array type 1`] = `
Object {
  "data": null,
  "loading": false,
  "networkStatus": 7,
  "stale": true,
}
`;

exports[`return computed property for nested type 1`] = `
Object {
  "data": Object {
    "me": Object {
      "__typename": "User",
      "department": Object {
        "__typename": "Department",
        "access": "Access to Security: 1111",
        "code": 1111,
        "name": "Security",
        Symbol(id): "$ROOT_QUERY.me.department",
      },
      "firstName": "John",
      "fullName": "John Doe",
      "lastName": "Doe",
      Symbol(id): "$ROOT_QUERY.me",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;
